--- a/src/app/share/side-bar/side-bar/side-bar.component.css
+++ b/src/app/share/side-bar/side-bar/side-bar.component.css
@@ -1,15 +1,8 @@
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
 a,
 a:hover,
 a:focus {
-  color: inherit;
-  text-decoration: none;
-  transition: all 0.3s;
-}
-
-p,
-p:hover,
-p:focus {
   color: inherit;
   text-decoration: none;
   transition: all 0.3s;
@@ -45,7 +38,6 @@ p:focus {
   display: flex;
   width: 100%;
   align-items: stretch;
-  background-image: linear-gradient(to top, #fff1eb 0%, #6d7fcc 100%);
 }
 
 #sidebar {
@@ -54,7 +46,6 @@ p:focus {
   background: #7386D5;
   color: #fff;
   transition: all 0.3s;
-  height: 100%;
 }
 
 #sidebar.active {
@@ -87,7 +78,7 @@ p:focus {
   background: #fff;
 }
 
-#sidebar ul li.active > a,
+#sidebar ul li.active>a,
 a[aria-expanded="true"] {
   color: #fff;
   background: #6d7fcc;
@@ -153,11 +144,9 @@ a.article:hover {
   #sidebar {
     margin-left: -250px;
   }
-
   #sidebar.active {
     margin-left: 0;
   }
-
   #sidebarCollapse span {
     display: none;
   }
@@ -424,3 +413,4 @@ span{
   margin: inherit;
   text-align: center;
 }
+
