--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -5,17 +5,29 @@
     <li class="list-group-item">
       <a [routerLink]="['']">Trang chủ</a></li>
     <li>
-      <div class="collapse">
+      <div class="list-group-item">
         <a [routerLink]="['/boards']">Bảng</a>
       </div>
     </li>
     <li class="list-group-item">
-      <p [routerLink]="['']">Nhóm <span (click)="showCreateWorkspaceModal()"><i class="fas fa-plus-circle is-hoverable"></i></span></p></li>
-<!--    <li class="list-group-item">A fourth item</li>-->
-<!--    <li class="list-group-item">And a fifth one</li>-->
+      <p class="menu-label" style="color: gainsboro">Nhóm <span (click)="showCreateWorkspaceModal()"><i class="fas fa-plus-circle is-hoverable"></i></span></p></li>
+    <li class="list-group-item" *ngFor="let workspace of workspaces, index as i">
+      <a (click)="showWorkspaceButton(i)">{{workspace.title}}</a>
+      <ul id="workspace-{{i}}" class="is-hidden">
+        <li><a style="font-size: 10px" routerLink="/workspaces/{{workspace.id}}/home">Home</a></li>
+        <li><a routerLink="/workspaces/{{workspace.id}}/members">Members</a></li>
+      </ul>
+    </li>
   </ul>
   <br>
   <br>
+  <p class="menu-label">
+    General
+  </p>
+  <ul class="menu-list">
+    <li><a>Dashboard</a></li>
+    <li><a>Customers</a></li>
+  </ul>
   Dự án C0421K1 <br>
   Dự án CodeGym
 </nav>
